Snapshot/objects/snapshot_asset__c.object
<CustomObject>
    <description>This is an administrative object for Snapshot Change and Release Automation. This object records the details of each child asset associated with the parent Snapshot Push.</description>
    <fields>
        <fullName>asset_name__c</fullName>
        <label>Asset Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>changed_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>created_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>deleted_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>document_folder__c</fullName>
        <label>Document Folder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>document_name__c</fullName>
        <label>Document Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>element_name__c</fullName>
        <label>Element Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extra_field_one__c</fullName>
        <label>Extra Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extra_field_two__c</fullName>
        <label>Extra Field Two</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extra_flag_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>extra_flag_two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>job_action__c</fullName>
        <label>Job Action</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metadata_base__c</fullName>
        <label>Metadata Base</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metadata_type__c</fullName>
        <label>Metadata Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>package_name__c</fullName>
        <label>Package Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reported_problem__c</fullName>
        <label>Reported Problem</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>snapshot_push__c</fullName>
        <label>Snapshot Push</label>
        <referenceTo>snapshot_push__c</referenceTo>
        <relationshipLabel>Snapshot Assets</relationshipLabel>
        <relationshipName>Snapshot_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>success_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Snapshot Asset</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>